# qss-editor-designer-plugin

./: CMakeLists.txt  README.MD
src/: LiveQssRegistrar.cpp  LiveQssRegistrar.h  LiveQssTaskMenu.cpp  LiveQssTaskMenu.h  LiveQssTaskMenuFactory.cpp  LiveQssTaskMenuFactory.h
